--- a/examples/jpa-demo/src/main/webapp/examples/rf10888.xhtml
+++ b/examples/jpa-demo/src/main/webapp/examples/rf10888.xhtml
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:rich="http://richfaces.org/iteration" xmlns:a4j="http://richfaces.org/a4j"
-    xmlns:c="http://java.sun.com/jsp/jstl/core">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:r="http://richfaces.org/core"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
+
 <ui:composition template="/layout/template.xhtml">
     <ui:param name="title" value="Data Scroller - RF-10888" />
     
@@ -26,7 +30,7 @@
                 </h:inputText>
             </h:panelGrid>
 
-            <rich:dataScroller id="scroller" for="table" />
+            <r:dataScroller id="scroller" for="table" />
             <h:dataTable value="#{rf10888.filteredData}" id="table" var="record" rows="20">
                 <h:column>
                     <f:facet name="header">
@@ -50,7 +54,7 @@
                 </h:column>
 
                 <f:facet name="footer">
-                    <rich:dataScroller />
+                    <r:dataScroller />
                 </f:facet>
             </h:dataTable>
         </h:form>
