--- a/examples/irc-client/src/main/webapp/welcome.xhtml
+++ b/examples/irc-client/src/main/webapp/welcome.xhtml
@@ -1,11 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
-    xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:a4j="http://richfaces.org/a4j"
-    xmlns:rich="http://richfaces.org/rich" xmlns:c="http://java.sun.com/jsp/jstl/core" template="/templates/template.xhtml">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:r="http://richfaces.org/core">
+<ui:composition template="/templates/template.xhtml">
     <ui:define name="body">
-        <rich:panel header="Connect to IRC">
+        <r:panel header="Connect to IRC">
             <h:form>
-                <rich:messages style="color:red" />
+                <r:messages style="color:red" />
                 <h:panelGrid columns="2">
                     <h:outputText value="Your nickname:" />
                     <h:inputText required="true" id="name" value="#{chatBean.userName}" />
@@ -16,6 +20,7 @@
                 </h:panelGrid>
                 <h:commandButton value="Connect" action="#{chatBean.connect}" />
             </h:form>
-        </rich:panel>
+        </r:panel>
     </ui:define>
 </ui:composition>
+</html>
